# FishingMap

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.yaml  config.py  elevation.py  pegelonline.py  pyproject.toml  terrain_download.py  tiles.py
.github/workflows/: docker.yml
templates/: index.html
