[project]
name = "fishingmap"
version = "0.1.0"
description = "Flask web app showing the Rhine with a real bathymetric depth overlay"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "numpy>=2.0",
    "rasterio>=1.5",
    "pyproj>=3.7",
    "pillow>=12.0",
    "mercantile>=1.2",
    "requests>=2.32",
]